# testing

./: .gitignore  pyproject.toml
_hidden/models/: __init__.py
brisket/: __init__.py  brisket.mplstyle  cli.py  config.py  console.py  observation.py  parameters.py  plotting.py
brisket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brisket/data/: cloudy.py  grid_manager.py
brisket/fitting/: __init__.py  fitter.py  observation.py  priors.py  results.py
brisket/grids/: __init__.py  cloudy.py  cloudy_bc03.toml  grids.py  manager.py
brisket/models/: __init__.py  agn.py  agn_models.py  base.py  base_models.py  calibration.py  core.py  igm.py  igm_models.py  model_galaxy.py  nebular.py  sfh.py  sfh_models.py  stellar.py  stellar_models.py
brisket/tests/: test.py  test_obs.py
brisket/tests/brisket_results/test/chains/: equal_weighted_post.txt  run.txt  weighted_post.txt  (+1 more)
brisket/utils/: .sed_old.py  __init__.py  filters.py  sed.py  utils.py
brisket/utils/filter_files/: filter_directory.toml  tophat_1500_100
brisket/utils/filter_files/aztec/: aztec71_1100  aztec71_1250  aztec71_850
brisket/utils/filter_files/uvista/: uvista_H  uvista_J  uvista_Ks  uvista_Y
docs/: api.rst  conf.py  custom_models.rst  grids.rst  index.rst  install.rst  models.rst  parameters.rst  quickstart.rst  requirements.txt  test.rst
docs/tutorials/: 1_example-model-sed.ipynb  2_example-simple-fit.ipynb
models/: model_galaxy.py
testmodule/: __init__.py  example.py
testmodule.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
testmodule/utils/: __init__.py  sed.py
(+3 files in other folders)
